# Chat-multicanale-Linux-Windows

./: CMakeLists.txt  FIL-client.c  FIL-client.h  FIL-server.c  FIL-server.h  LICENSE  README.md  defineSets.h  fileSystemUtylity.c  fileSystemUtylity.h  globalSet.h  helpFunx.c  helpFunx.h  main.c  terminalShell.c  terminalShell.h
include/: fileSystemUtylity.h  mexData.h  socketConnect.h  tableFile.h  terminalShell.h  thFunx.h
src/: fileSystemUtylity.c  mexData.c  socketConnect.c  tableFile.c  terminalShell.c  thFunx.c
treeFunx/include/: avl.h  common.h  dlist.h  queue.h  stack.h  tree.h
treeFunx/src/: avl.c  common.c  dlist.c  log.c  queue.c  stack.c  tree.c
